--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "em-logr",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Bunyan/Pino Logger instance ready to use",
   "main": "logr.js",
   "scripts": {
@@ -11,7 +11,10 @@
     "url": "git@github.com:EveryMundo/em-logr.git"
   },
   "keywords": [
-    "bunyan", "pino", "everymundo", "logger"
+    "bunyan",
+    "pino",
+    "everymundo",
+    "logger"
   ],
   "author": "Daniel Santana <daniel@everymundo.com>",
   "license": "MIT",
